# talus_drc_helper

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
pages/: 01-Synergy.py  01-Synergy_And_Dispenser.py  03-AnnotationSheet.py  04-AnnotationSheetTemplate.py
talus_drc_helper/: dispenser_io.py  fit.py  gr_tools.py  plate_annotations.py  plate_io.py  stramlit.py
tests/: test_dispenser_io.py  test_fit_estimator.py  test_plate_io.py  test_sigmoid_fit.py
tests/data/: 20221122_CTG CAOV3 plate 1.txt  220908_100_cpd_SKNAS_4h_570_600_delta_plate_1.txt
tests/data/dispenser/: README.md
