[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "talus_drc_helper"
authors = [
    {name = "Sebastian Paez", email = "spaez@talus.bio"},
]
description = "A tool to help managing, generating and sharing dose-response curves"
requires-python = ">=3.9,<=3.11"
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas >= 1.5.2",
    "numpy >= 1.23.5",
    "streamlit",
    "loguru >= 0.6.0",
    "uniplot >= 0.9.1",
    "scipy",
    "scikit-learn",
    "openpyxl",
    "beautifulsoup4",
    "matplotlib",
    "vizta",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"


[project.optional-dependencies]
test = [
    "pytest >= 7.2.0",
    "pytest-datadir >= 1.4.1",
    "pytest-cov >= 4.0.0",
]
dev = [
    "black",
    "ruff",
    "ipykernel",
]


[tool.setuptools.packages.find]
include = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules -v"
testpaths = [
    "talus_drc_helper",
    "tests",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "I", "D", "UP", "N", "ANN", "T20"]

# ANN101 Missing type annotation for `self` in method
# D213 Multi-line docstring summary should start at the second lin
# D203 1 blank line required before class docstring
# D100 Missing docstring in public module
# ANN102 Missing type annotation for `cls` in classmethod
# D401 First line of docstring should be in imperative mood
ignore = ["D213", "ANN101", "D203", "D100", "ANN102", "D401"]

fix = true

[tool.ruff.per-file-ignores]
"talus_drc_helper/__init__.py" = ["D104"]
"tests/*.py" = ["ANN"]
"talus_drc_helper/fit.py" = ["N806", "N803"]
# To maintain consisetency with the sklearn api,
# I am ignoring capitalization of variables in that file.
# X is used A LOT thoughout the API

[tool.black]
line-length = 88
target-version = ['py39', 'py310']
preview = true
